--- a/src/less/collections.less
+++ b/src/less/collections.less
@@ -40,7 +40,7 @@
                 position: absolute;
                 right: 90px;
                 bottom: 5px;
-                color: #f00;
+                color: #666;
             }
         }
     }
