--- a/src/less/orders.less
+++ b/src/less/orders.less
@@ -36,7 +36,7 @@
             }
             .order-desc {
                 position: relative;
-                padding: 10px 10px 10px 80px;
+                padding: 10px 10px 10px 20px;
                 min-height: 80px;
                 img {
                     position: absolute;
@@ -44,6 +44,7 @@
                     height: 60px;
                     left: 10px;
                     top: 10px;
+                    display: none;
                 }
                 h4 {
                     margin: 0;
