--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -49,7 +49,7 @@
       ui-state="dropdown3"
       ui-turn-off="dropdown3">
       <li><a href="#/member_ship">个人主页</a></li>
-      <li><a href="http://www.urcoffee.com/article/list/3.jhtml">购物指南</a></li>
+      <!-- <li><a href="http://www.urcoffee.com/article/list/3.jhtml">购物指南</a></li> -->
       <li><a ng-click="customerService();Ui.turnOff('dropdown3');">客服电话</a></li>
       <li><a href="#/your_coffee">你的咖啡</a></li>
       <li><a href="#/login">绑定</a></li>
