--- a/src/less/group_purchase.less
+++ b/src/less/group_purchase.less
@@ -75,7 +75,6 @@ ul.group-purchase-title {
                 font-weight: bold;
                 color: #333;
                 padding-top: 10px;
-                padding-bottom: 20px;
             }
             .item-price {
                 span {
@@ -86,6 +85,10 @@ ul.group-purchase-title {
                 del {
                     color: #999;
                 }
+            }
+            .item-remaining {
+                font-size: 16px;
+                color: #f50;
             }
             .item-select,
             .item-alert {
